<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- general -->
    <string name="confirm">Si</string>
    <string name="disconfirm">No</string>
    <string name="next">Siguiente</string>
    <string name="ok">Ok</string>
    <string name="done">Listo</string>

    <!-- podria borrar estas... -->
    <string name="app_name">Impact Alert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- pantalla de primera vez -->
    <string name="first_time_presentation">¡Bienvenido a ImpactAlert! Cuando activas esta aplicación desde el menú principal, esta monitoreará por medio de los acelerómetros de tu dispositivo si pudiste haber tenido un accidente en tu motocicleta o bicicleta. Cuando esto pase, mandará un mensaje que tu definas a tus contactos de emergencia para que ellos tomen acción. Te recomendamos que te familiarices con la aplicación antes de usarla en tus viajes.</string>
    <string name="first_time_presentation_continue">Tomate un momento para realizar las configuraciones de la aplicación</string>
    <string name="name_request">Nombre:</string>
    <string name="contacts_request">Selecciona tus contactos de emergencia</string>
    <string name="no_contacts_selected">No se han seleccionado los contactos de emergencia</string>
    <string name="contacts_selected">Contactos seleccionados</string>

    <!-- pantalla de seleccion de contactos -->
    <string name="no_data">No hay contactos en tu telefono, para usar esta aplicación necesitaras registrar al menos uno</string>
    <string name="close_app">Cerrar applicacion</string>
    <string name="select_emergency_contacts">Selecciona tus contactos de emergencia</string>
    <string name="no_contacts_checked">Debes seleccionar al menos a un contacto</string>

    <!-- pantalla de definicion del mensaje -->
    <string name="distress_message_request">¿Qué mensaje deseas que le enviemos a tus contactos?</string>
    <string name="distress_message_default_first">Mensaje de ImpactAlert. El usuario </string>
    <string name="distress_message_default_cont"> pudo haber sufrido un accidente. Favor de contactarle y posteriormente llamar a las autoridades correspondientes</string>
    <string name="insert_location">Insertar mi ubicación</string>
    <string name="insert_name">Insertar mi nombre</string>
    <string name="missing_none">¿Guardar estas configuraciones?</string>
    <string name="missing_name">¿Estás seguro de que no quieres agregar tu nombre a tu mensaje de emergencia?</string>
    <string name="missing_gps">¿Estás seguro de que no quieres agregar tu ubicación GPS a tu mensaje de emergencia?</string>
    <string name="missing_both">¿Estás seguro de que no quieres agregar tu nombre y ubicación GPS a tu mensaje de emergencia?</string>

    <!-- pantalla de emergencia -->
    <string name="distress_in_progress">En este momento tu dispositivo esta mandando tu mensaje de emergencia a los contactos configurados. Por favor espere.</string>
    <string name="distress_finished">Impact Alert ha terminado de mandar los mensajes definidos a los usuarios de emergencia. Esperamos que la ayuda le llegue pronto. Gracias por usar Impact Alert.</string>
    <string name="cancel_distress">Cancelar el envio de la señal de emergencia</string>
    
    <!-- menu principal -->
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="start_travel">Iniciar recorrido</string>
    <string name="config">Configuraciones</string>
    <string name="about">Acerca de</string>
    <string name="legal_note">Notas legales</string>

    <!-- recorrido -->
    <string name="title_activity_on_the_road">On The Road</string>
    <string name="on_the_road_title">Impact Alert esta monitoreando su recorrido</string>
    <string name="send_distress_msg">Mandar señal de emergencia</string>
    <string name="send_distress_msg_confirmation">¿Estas seguro que quieres mandar la señal de emergencia?</string>
    <string name="stop_travel">Recorrido terminado</string>
    <string name="stop_travel_confirmation">¿Estás seguro que quieres detener el recorrido?</string>

    <!-- configuraciones -->
    <string name="title_activity_configuration">ConfigurationActivity</string>

    <!-- acerca de -->
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_description">Impact Alert es una aplicación que manda mensajes de emergencia cuando detecta que pudiste haber tenido estado envuelto en un choque o una caida de motocicleta o bicicleta.</string>
    <string name="how_it_works">Impact Alert utiliza los acelerómetros de tu dispositivo móvil. Cuando estos mandan señales de cambio de dirección y fuerza muy repentinos, se activa una alarma que si no es respondida manda el mensaje de alerta</string>

    <!-- notas legales -->
    <string name="legal_note_comment">Impact Alert no garantiza detectar impactos, accidentes o percances que el usuario pudiera tener. El usuario no debe depender totalmente en Impact Alert para su seguridad; usar equipo de protección, manejar de forma quiciosa, diligente y en climas apropiados es recomendado.</string>

    <!-- necesito reubicar estas -->
    <string name="title_activity_legal_note">LegalNoteActivity</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_message_config">MessageConfigActivity</string>
    <string name="back_to_main_menu">Menu Principal</string>
    <string name="title_activity_main_configuration">MainConfigurationActivity</string>
    <string name="title_activity_distress">DistressActivity</string>

</resources>