<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.impactalert.main.MainMenuActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <Button
        android:id="@+id/button_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_acerca_de"
        android:layout_centerHorizontal="true"
        android:text="@string/config"
        android:onClick="gotoConfiguration" />

    <Button
        android:id="@+id/button_acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_notas_legales"
        android:layout_centerHorizontal="true"
        android:text="@string/about"
        android:onClick="gotoAbout" />

    <Button
        android:id="@+id/button_notas_legales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/legal_note"
        android:onClick="gotoLegalNote" />

    <Button
        android:id="@+id/button_iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_config"
        android:layout_centerHorizontal="true"
        android:onClick="gotoIniciar"
        android:text="@string/start_travel" />

</RelativeLayout>
